# mat188_learning_standards

./: README.md  config2024.yml  ls_report_header.tex  ls_report_page.tex  lsa_v4.py  make_ls_report_v2.py  pyproject.toml  wwparse_v2.py
Learning_Standards_2024/: mathbib.sty  preamble.tex  question test.tex  questionbank.sty
Learning_Standards_2024/Lectures/: slidetemplate.tex
Learning_Standards_2024/Standards (Hard Originals)/: Chap3Goals.tex
Learning_Standards_Revised_Summer_2023/: All_Goals.tex  chapter_template.tex  concepts.tex  learningstandards2023.sty  mathbib.sty  preamble.tex  question test.tex  questionbank.sty  questions.tex  standards.tex  temp.tex  test.tex
Learning_Standards_Revised_Summer_2023/Lectures/: Review.tex
Learning_Standards_Revised_Summer_2023/Standards (Hard Originals)/: Chap0Goals.tex  Chap1Goals.tex  Chap2Goals.tex  Chap5Goals.tex  Chap6Goals.tex  Chap7Goals.tex
